# bdfut

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  REORGANIZATION_SUMMARY.md  docker-compose.yml  hybrid_fixtures_strategy.py  prd.md  pyproject.toml  requirements.txt
.github/workflows/: build-deploy.yml  dependencies.yml  docker.yml  release.yml  test.yml  tests.yml
.taskmaster/docs/: prd.txt
bdfut/: __init__.py  cli.py
bdfut/archive/: README.md  relatorio_final.py  status_banco.py
bdfut/config/: config.py
bdfut/core/: apm.py  data_quality.py  etl_metadata.py  health.py  incremental_sync.py  logging.py  sportmonks_client.py  supabase_client.py
bdfut/logs/: README.md  backfill_report_20250915_135515.txt
bdfut/scripts/: README.md
bdfut/tools/: 19_adicionar_colunas_types_postgres.py  28_simular_coleta_countries_completa.py  README.md  apply_rls_policies.py  create_exec_function.sql  create_missing_tables.py  create_tables.py  encryption_manager.py  lgpd_compliance_manager.py  security_monitoring_manager.py  test_audit_system.py  test_encryption_system.py  test_lgpd_compliance_system.py
deployment/supabase/: config.toml
docs/: INDICE_COMPLETO.md  README.md
docs/devops/: MONITORING_GUIDE.md
frontend/: README.md
frontend/src/: middleware.ts
logs/: RLS_APPLICATION_REPORT_175795194128494.md  SECURITY_AUDIT_REPORT_20250915.md  TASK_SEC_002_REPORT_20250915.md  TASK_SEC_003_REPORT_20250915.md  TASK_SEC_004_REPORT_20250915.md  TASK_SEC_005_REPORT_20250915.md  TASK_SEC_006_REPORT_20250915.md  auditoria_indices_20250113.md  task_db_002_constraints_20250113.md  task_db_003_optimize_indices_20250113.md  task_db_004_materialized_views_20250113.md  task_db_005_partitioning_20250113.md  task_db_006_extensions_20250113.md
monitoring/: alertmanager.yml
project/: .gitignore  ESTRUTURA_FINAL.md  INDICE_PROJETO.md  NAVEGACAO_RAPIDA.md  ORGANIZACAO_E_ONBOARDING_FINAL.md  README.md  cleanup_project.sh
project/config/: Dockerfile  ESTRATEGIA_100_PERCENT_DADOS.md  ETL_ENTERPRISE_FINAL_REPORT.md  Makefile  setup.py  test_coaches_small.py
project/docs/: ESTRUTURA_ORGANIZADA.md  NAVEGACAO_RAPIDA.md
project/docs_organized/: COMPLETE_PROJECT_GUIDE.md  NAVIGATION_INDEX.md  PROJECT_ORGANIZATION.md
project/monitoring/: prometheus.yml
project/tests/: __init__.py  conftest.py  test_etl_process_simple.py  test_regression.py  test_sportmonks_client.py
scripts/development/: setup-pre-commit.sh
tests/: test_core_additional.py  test_data_quality.py  test_e2e.py  test_etl_metadata.py  test_integration.py  test_performance.py  test_security.py  test_supabase_client.py
(+596 files in other folders)
